docs(cardinal): use {custom-group} instead of 'game' in query/tx endpoints (#728)
