# cardinal/server/handler/query.go
@@ -12,11 +12,12 @@ import (
 //	@Description  Executes a query
 //	@Accept       application/json
 //	@Produce      application/json
-//	@Param        queryName  path      string  true  "Name of a registered query"
-//	@Param        queryBody  body      object  true  "Query to be executed"
-//	@Success      200        {object}  object  "Results of the executed query"
-//	@Failure      400        {string}  string  "Invalid request parameters"
-//	@Router       /query/game/{queryName} [post]
+//	@Param        queryGroup  path      string  true  "Query group"
+//	@Param        queryName   path      string  true  "Name of a registered query"
+//	@Param        queryBody   body      object  true  "Query to be executed"
+//	@Success      200         {object}  object  "Results of the executed query"
+//	@Failure      400         {string}  string  "Invalid request parameters"
+//	@Router       /query/{queryGroup}/{queryName} [post]
 func PostQuery(queries map[string]map[string]engine.Query, wCtx engine.Context) func(*fiber.Ctx) error {
 	return func(ctx *fiber.Ctx) error {
 		query, ok := queries[ctx.Params("group")][ctx.Params("name")]
