# cardinal/server/handler/tx.go
@@ -34,11 +34,12 @@ type Transaction = sign.Transaction
 //	@Description  Submits a transaction
 //	@Accept       application/json
 //	@Produce      application/json
-//	@Param        txName  path      string                   true  "Name of a registered message"
-//	@Param        txBody  body      Transaction              true  "Transaction details & message to be submitted"
-//	@Success      200     {object}  PostTransactionResponse  "Transaction hash and tick"
-//	@Failure      400     {string}  string                   "Invalid request parameter"
-//	@Router       /tx/game/{txName} [post]
+//	@Param        txGroup  path      string                   true  "Message group"
+//	@Param        txName   path      string                   true  "Name of a registered message"
+//	@Param        txBody   body      Transaction              true  "Transaction details & message to be submitted"
+//	@Success      200      {object}  PostTransactionResponse  "Transaction hash and tick"
+//	@Failure      400      {string}  string                   "Invalid request parameter"
+//	@Router       /tx/{txGroup}/{txName} [post]
 func PostTransaction(
 	provider servertypes.Provider, msgs map[string]map[string]types.Message, disableSigVerification bool,
 ) func(*fiber.Ctx) error {
